/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "ReportContextMessage";


message ReportContextDto {
    message DoubleList {
        repeated double doubleValue = 1;
    }
    message FloatList {
        repeated float floatValue = 1;
    }
    message IntList {
        repeated sint32 intValue = 1;
    }
    message LongList {
        repeated sint64 longValue = 1;
    }
    message BooleanList {
        repeated bool booleanValue = 1;
    }
    message StringList {
        repeated string stringValue = 1;
    }

    message Value {
        oneof value {
        DoubleList doubleList = 2;
        FloatList floatList = 3;
        IntList intList = 4;
        LongList longList = 5;
        BooleanList booleanList = 6;
        StringList stringList = 7;
    }
}
    message ParameterValue {
        required string name = 1;
        required Value value = 2;
    }

    message Dimension {
        required string name = 1;
        required Value value = 2;
    }

    optional string reportId = 1;
    repeated ParameterValue parameters = 2;
    repeated Dimension dimensions = 3;
    repeated ReportContextDto childContexts = 4;
    optional string output = 5;
    repeated Dimension excludedFilters = 6;
    optional string multiContextMode = 7;
}
