/*
  ~ Copyright 2016 Claymore Minds Limited and Niche Solutions (UK) Limited
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
*/

option java_package = "io.viewserver.messages.protobuf.dto";
option java_outer_classname = "TableEditCommandMessage";

import "core/CommandDto.proto";
import "TableEventDto.proto";

message TableEditCommandDto {
    required string tableName = 1;
    required TableEventDto tableEvent = 2;

    enum Operation {
        CREATE = 1;
        EDIT = 2;
        DELETE = 3;
    }
    optional Operation operation = 3;

    message CreationConfig {
        optional string tableType = 1;
        optional bytes config = 2;
    }
    optional CreationConfig creationConfig = 4;
}

extend CommandDto {
    optional TableEditCommandDto tableEditCommand = 205;
}